--- a/views/materias.html
+++ b/views/materias.html
@@ -5,6 +5,36 @@
 
 <center><img class="materiasPic" src="/assets/materias.png"></img></center>
 
+<style>
+.buttonMat {
+    border: solid 2px #fff;
+    padding: 8px 25px;
+    font-size: 11px;
+    color: #fff;
+    background: #040506;
+    letter-spacing: 2px;
+    box-shadow: 0px 0px 0px;
+    width: fit-content;
+    font-weight: 300;
+    font-family: monospace;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.selectorMat {
+    display: flex;
+}
+
+</style>
+
+<div class="selectorMat">
+    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
+</div>
+
 <div class="t2">Simpatismo</div>
 <p>Manipula la materia a través de los vínculos inherentes en las cosas. Esto quiere decir que los magos basados en el simpatismo recurren a la energía de su entorno para realizar su magia, por eso dista de la hechicería donde se recurre a la propia energía para mutar la materia.</p>
 <p>Sin embargo, alterar la materia en ambos casos tiene un coste. Mientras los hechiceros consumen su maná interno, los simpatistas necesitan hacer un intercambio físico en las cosas. Por poner unos ejemplos:</p>
