--- a/views/materias.html
+++ b/views/materias.html
@@ -23,16 +23,24 @@
 
 .selectorMat {
     display: flex;
+    flex-wrap: wrap;
 }
 
 </style>
 
 <div class="selectorMat">
     <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color:#b68dc8">Hechicería</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #b1a77a">Runología</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #616584">Artificería</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #4ca58d">Alquimia</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #e28195">Criat. Mágicas</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #73c261">Herbología</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #c987b9">Exorcismo</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #8da3c8">Historia</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #846161">Maref</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #9cab70">Mentalismo</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #c77844">Nominación</div>
 </div>
 
 <div class="t2">Simpatismo</div>
