--- a/views/materias.html
+++ b/views/materias.html
@@ -14,7 +14,7 @@
     background: #040506;
     letter-spacing: 2px;
     box-shadow: 0px 0px 0px;
-    width: fit-content;
+    width: 33.33333333333333%;
     font-weight: 300;
     font-family: monospace;
     text-transform: uppercase;
@@ -34,7 +34,7 @@
     <div class="buttonMat" id="Simpatismo" style="background-color: #b1a77a">Runología</div>
     <div class="buttonMat" id="Simpatismo" style="background-color: #616584">Artificería</div>
     <div class="buttonMat" id="Simpatismo" style="background-color: #4ca58d">Alquimia</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #e28195">Criat. Mágicas</div>
+    <div class="buttonMat" id="Simpatismo" style="background-color: #e28195">C. Mágicas</div>
     <div class="buttonMat" id="Simpatismo" style="background-color: #73c261">Herbología</div>
     <div class="buttonMat" id="Simpatismo" style="background-color: #c987b9">Exorcismo</div>
     <div class="buttonMat" id="Simpatismo" style="background-color: #8da3c8">Historia</div>
