--- a/views/materias.html
+++ b/views/materias.html
@@ -83,9 +83,9 @@
 <p>Aunque todas las vías de Maref enseñan de distinta manera tienen un foco comun: Utilizar el tercer ojo para dejarse llevar por una persepción trascendental y predecir las acciones de los oponentes.</p>
 <ul>
     <li><b>Shii-Cho:</b> La primera forma de combate enseñada a los iniciados en cualquiera de las vías de Maref. Es versátil, pues mantiene un equlibrio en la defensa y en el ataque, está enfocada contra adversarios humanoides: Ataques a flanco izquierdo, flanco derecho, cabeza y piernas.</li>
-    <li><b>Makashi:</b> La forma predilecta cuando el adversario utiliza el mismo arte de combate. Es un estilo de cobate elegantes, precisos, sosegado y paciente.</li>
-    <li><b>Soresu:</b> Es la forma más defensiva de todas, es la forma que se adopta en combate cuando se detecta en el adversario un estilo de combate agresivo o desventaja de rango. Requiere de mayores reflejos y aprovecha los errores rivales para atacar.</li>
-    <li><b>Ataru:</b> La forma agresiva,  veloz y efectiva contra oponentes únicos, pero era débil en combate prolongado y espacios confinados. Destaca por sus acrobacias asistidas por a fuerza cona atques poderosos.</li>
+    <li><b>Makashi:</b> La forma predilecta cuando el adversario utiliza el mismo arte de combate que el usuario. Es un estiloe elegante, preciso, sosegado y paciente que trata de predecir a su oponente.</li>
+    <li><b>Soresu:</b> Es la forma más defensiva de todas, es la forma que se adopta en combate cuando se detecta en el adversario un estilo agresivo o se encuentra en desventaja de rango. Requiere de mayores reflejos y aprovecha los errores rivales para atacar.</li>
+    <li><b>Ataru:</b> La forma agresiva. Es veloz y muy efectiva contra oponentes únicos, pero débil en combate prolongado y espacios confinados. Destaca por sus acrobacias asistidas por la fuerza de ataques poderosos.</li>
     <li><b>Shiem-Djen So:</b> Para desempeñarlo es necesario ser capaz de ver a través del tercer ojo a tu oponente y poder aplicar la forma Makashi y Soresu en conjunto. Sin la ayuda del tercer ojo esta forma es inútil.</li> 
     <li><b>Niaman:</b> La forma híbrida, combina todas las formas anteriores, pero sólo es capaz de funcionar si se domina todas y cada una de ellas a la perfección.</li>
     <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro en un "todo vale". Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados.</li>
