--- a/views/materias.html
+++ b/views/materias.html
@@ -15,6 +15,7 @@
     letter-spacing: 2px;
     box-shadow: 0px 0px 0px;
     width: 33.33333333333333%;
+    text-align: center;
     font-weight: 300;
     font-family: monospace;
     text-transform: uppercase;
@@ -25,22 +26,21 @@
     display: flex;
     flex-wrap: wrap;
 }
-
 </style>
 
 <div class="selectorMat">
-    <div class="buttonMat" id="Simpatismo" style="background-color: #77b1b2">Simpatismo</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color:#b68dc8">Hechicería</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #b1a77a">Runología</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #616584">Artificería</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #4ca58d">Alquimia</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #e28195">C. Mágicas</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #73c261">Herbología</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #c987b9">Exorcismo</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #8da3c8">Historia</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #846161">Maref</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #9cab70">Mentalismo</div>
-    <div class="buttonMat" id="Simpatismo" style="background-color: #c77844">Nominación</div>
+    <div class="buttonMat" id="simp" style="background-color: #77b1b2">Simpatismo</div>
+    <div class="buttonMat" id="hech" style="background-color:#b68dc8">Hechicería</div>
+    <div class="buttonMat" id="runol" style="background-color: #b1a77a">Runología</div>
+    <div class="buttonMat" id="artif" style="background-color: #616584">Artificería</div>
+    <div class="buttonMat" id="alqui" style="background-color: #4ca58d">Alquimia</div>
+    <div class="buttonMat" id="cmagic" style="background-color: #e28195">C. Mágicas</div>
+    <div class="buttonMat" id="herbol" style="background-color: #73c261">Herbología</div>
+    <div class="buttonMat" id="exorc" style="background-color: #c987b9">Exorcismo</div>
+    <div class="buttonMat" id="histor" style="background-color: #8da3c8">Historia</div>
+    <div class="buttonMat" id="maref" style="background-color: #846161">Maref</div>
+    <div class="buttonMat" id="mental" style="background-color: #9cab70">Mentalismo</div>
+    <div class="buttonMat" id="nomin" style="background-color: #c77844">Nominación</div>
 </div>
 
 <div class="t2">Simpatismo</div>
@@ -91,6 +91,10 @@
     <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro en un "todo vale". Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados.</li>
 </ul>
 <p>En la parte de adiestramiento para tonificar el cuerpo se incluyen pruebas de precisión, velocidad, escalada, vuelo, etc. Todo depende de la vía por la que el profesor está acostumbrado a instruir.</p>
+
+<script defer>
+
+</script>
 
 <%- include(`./partials/bot-part.html`) %>
 
