--- a/views/materias.html
+++ b/views/materias.html
@@ -57,6 +57,11 @@
 
 <p>No obstante, date cuenta que del mismo modo que los recursos en el ambiente se consumen para ese intercmbio de energía lo mismo pasa con los recursos del propio cuerpo, por lo que estos casos suelen ser la última baza. Gastar toda la humedad del cuerpo puede llegar a matar a su usuario por deshidratación, gastar tu calor te hará sufrir hipotermia, gastar el aire de tus pulmones, asfixia.   </p>
 
+
+
+
+
+<div class="infoMat" value="">hola</div>
 <div class="t2">Hechicería</div>
 <p>Más fácil de comprender que el simpatismo, pero más dificil de dominar en la práctica. Un simpatista no requiere concentración a la hora de establecer sus vínculos en los intercambios de energía, pudiendo realizar vínculos simpáticos (lo que serían conjuros en hechicería) al mismo tiempo que se utilizan otras habilidades físicas.<br><br> Sin embargo, los hechiceros necesitan una alta concentración para mantener sus hechizos o encantamientos. <br><br>Es por esto que aquellos entregados al combate físico casi siempre se decantan por una combinación con el simpatismo, mientras que los hechiceros son más dados a la erudición, aunque no necesariamente siempre tenga que ser así.</p>
 <p>Para conjurar su magia, los hechiceros utilizan un recurso interno denominado "maná". Un recurso que, como la energía que maneja el simpatismo, no es infinito y puede llegar a consumirse. Tienen más fácil la labor de alterar los elementos en distintos medios como: Crear lluvias en mitad de una sequía, congelar cortinas de fuego sin pensar en disipar el calor como lo haría el simpatista, crear bolas de fuego en mitad de Ul'gurd. Sin embargo, el riesgo que supone gastar ese maná es más peligroso que en el simpatismo.</p>
@@ -66,6 +71,12 @@
 
 <p><i>Los hechiceros al igual que los simpatistas pueden usar contendores de magia para suplir sus límites: El simpatismo guarda la energía que necesita (focos de calor concentrado, focos de agua, etc) y el hechicero guarda el maná que necesite. Sin embargo requieren de la rama de runología para poder hacer dichos contendores.</i></p>
 
+
+
+
+
+
+
 <div class="t2">Nominación</div>
 <p>Cuando conoces el nombre de las cosas, el manejo de la magia: La capacidad de moldear el mundo a tu antojo es infinito, manipular la materia no te exije un coste a cambio. Los Nominadores ordenan al mundo y el mundo obedece. Conocer también el nombre oculto de las personas te da poder sobre ellos, tanto que hasta el mentalismo se queda corto. </p>
 <p>Sin embargo, encontrar los nombres de las cosas no se basa en aprender palabras, consiste más bien en la concepción completa de una entidad. Si por ejemplo quisieramos conocer el nombre de una piedra de la calle habría que saber absolutamente todo sobre ella, ser capaz de ver de todas sus perspectivas al mismo tiempo, cuánto pesa, de qué está compuesta, cuánto tardaría en caer desde cierta altura, cual es su reacción con los distintos elementos, entre muchas más cosas que escapan a la comprensión. Todo eso, es lo que configura el nombre de esa única piedra de la calle.</p>
@@ -74,8 +85,15 @@
 <p>La mente dormida normalmente sale a flote cuando aflora un sentimiento muy fuerte, como una ira incontenida en un momento muy concreto, o un júbilo como nunca antes sentido.</p>
 <p>Una vez toma consciencia, pueden pasar dos cosas: O la persona se vuelve loca de forma irreversible, o cosigue dominar el nombre que ha hecho despertar la mente dormida.</p>
 
+
+
+
 <div class="t2">Historia</div>
 <p>Narra los acontecimientos pasados sucedidos en Narysium: Guerras, disputas, políticas de los distintos lugares. Habla de la historia de los centinelas, aunque poco se conozca. De la vida en las distintas ciudades, de sus costumbres sus habitantes y sus cultos.</p>
+
+
+
+
 
 <div class="t2">Maref</div>
 <p>Existen muchas vías para dominar Maref. Es un ámbito muy grande que abarca desde tonificar el cuerpo hasta aprender las distintas vías de combate de las que se compone. Ayudan a dosificar eficientemente el maná interno para la hechicería, así como a dividir la mente sin perder la concentración, y cómo aprender a apoyarse en el simpatismo como auxiliar para el combate físico.</p>
@@ -92,7 +110,18 @@
 </ul>
 <p>En la parte de adiestramiento para tonificar el cuerpo se incluyen pruebas de precisión, velocidad, escalada, vuelo, etc. Todo depende de la vía por la que el profesor está acostumbrado a instruir.</p>
 
+
+
+
+
 <script defer>
+
+$(".infoMat").hide();
+
+$(".buttonMat").on('click', event => {
+    alert(event.target.id);
+});
+
 
 </script>
 
