--- a/views/ficha.html
+++ b/views/ficha.html
@@ -15,7 +15,7 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <br><b>— Selección de atributos</b>: Una vez acabada la ficha y sea revisada por el staff, tendrán que elegir una serie de atributos de una lista que les pasaremos por mensajería privada.
 <br><br><b>— Integración</b>: Los nuevos alumnos/profesores que ingresen a la academia de Narysium formarán parte de los Ignotos el primer mes, pudiéndose alargar si hay un desbalance en los clanes, en cuyo caso irán entrando en los clanes por orden de prioridad.
 <br><br><b>— Pasividad</b>: Aquellos miembros que no aparezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
-<br><br><b>— Ignotos</b>: No tienen sala común, sus dormitorios son <a href="/dormitorios">habitaciones cutres</a> están dispuestos en la planta subsuelo S1, repartidos en un largo pasillo.
+<br><br><b>— Ignotos</b>: No tienen sala común, sus dormitorios están dispuestos en la planta subsuelo S1, repartidos en un largo pasillo.
 
 <br><p><i>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el vínculo del amparo <i>normalmente</i> se va a mantener el mismo aunque se esté sin clan, pero será mejor para ustedes.</i></p>
 
