--- a/views/materias.html
+++ b/views/materias.html
@@ -121,10 +121,8 @@
 $(".infoMat").hide();
 
 $(".buttonMat").on('click', event => {
-    let mat = event.target.id;
     $(".infoMat").hide();
-    console.log(`#${mat}`);
-    $(`#${mat}`).show();
+    $(event.target.id).show();
 });
 
 
