--- a/views/materias.html
+++ b/views/materias.html
@@ -43,7 +43,7 @@
     <div class="buttonMat" id="nomin" style="background-color: #c77844">Nominación</div>
 </div>
 
-<div class="infoMat" value="simp">Pulsa los botones para mostrar la descripción de cada materia.</div>
+<div class="infoMat">Pulsa los botones para mostrar la descripción de cada materia.</div>
 
 
 <!--mat-->
@@ -68,11 +68,11 @@
 
 
 <!--mat-->
-<div class="infoMat" value="hech">cmagic</div>
+<div class="infoMat" value="cmagic">cmagic</div>
 
 
 <!--mat-->
-<div class="infoMat" value="runol">
+<div class="infoMat" value="hech">
     
     <div class="t2">Hechicería</div>
     <p>Más fácil de comprender que el simpatismo, pero más dificil de dominar en la práctica. Un simpatista no requiere concentración a la hora de establecer sus vínculos en los intercambios de energía, pudiendo realizar vínculos simpáticos (lo que serían conjuros en hechicería) al mismo tiempo que se utilizan otras habilidades físicas.<br><br> Sin embargo, los hechiceros necesitan una alta concentración para mantener sus hechizos o encantamientos. <br><br>Es por esto que aquellos entregados al combate físico casi siempre se decantan por una combinación con el simpatismo, mientras que los hechiceros son más dados a la erudición, aunque no necesariamente siempre tenga que ser así.</p>
@@ -94,16 +94,18 @@
 <div class="infoMat" value="alqui">aqlui</div>
 
 <!--mat-->
-<div class="infoMat" value="cmagic">cmagic</div>
-
-<!--mat-->
 <div class="infoMat" value="herbol">herbol</div>
 
 <!--mat-->
 <div class="infoMat" value="exorc">exorc</div>
 
 <!--mat-->
-<div class="infoMat" value="histor">histor</div>
+<div class="infoMat" value="histor">
+   
+<div class="t2">Historia</div>
+<p>Narra los acontecimientos pasados sucedidos en Narysium: Guerras, disputas, políticas de los distintos lugares. Habla de la historia de los centinelas, aunque poco se conozca. De la vida en las distintas ciudades, de sus costumbres sus habitantes y sus cultos.</p>
+<p><i>Los profesores que quiera impartir esta asignatura pueden darle a la imaginación e inventarse cualquier acontecimiento en la ambientación de Narysium, pero siempre deben hablarlo con la administración para que sea aprobado o no.</i></p>
+</div>
 
 
 <!--mat-->
@@ -151,11 +153,6 @@
 
 
 
-
-
-
-<div class="t2">Historia</div>
-<p>Narra los acontecimientos pasados sucedidos en Narysium: Guerras, disputas, políticas de los distintos lugares. Habla de la historia de los centinelas, aunque poco se conozca. De la vida en las distintas ciudades, de sus costumbres sus habitantes y sus cultos.</p>
 
 
 
