--- a/views/materias.html
+++ b/views/materias.html
@@ -89,6 +89,8 @@
 <!--mat-->
 <div class="infoMat" value="artif">artif</div>
 
+<!--mat-->
+<div class="infoMat" value="runol">runol</div>
 
 <!--mat-->
 <div class="infoMat" value="alqui">aqlui</div>
