--- a/views/materias.html
+++ b/views/materias.html
@@ -43,7 +43,9 @@
     <div class="buttonMat" id="nomin" style="background-color: #c77844">Nominación</div>
 </div>
 
-<div class="infoMatBegin">Pulsa los botones para mostrar la descripción de cada materia.</div>
+<div class="infoMatBegin">
+    <p><i>Pulsa los botones para mostrar la descripción de cada materia.</i></p>
+</div>
 
 
 <!--mat-->
