--- a/views/materias.html
+++ b/views/materias.html
@@ -44,7 +44,7 @@
 </div>
 
 <div class="infoMatBegin">
-    <p><i>Pulsa los botones para mostrar la descripción de cada materia.</i></p>
+    <br><p><i>Pulsa los botones para mostrar la descripción de cada materia.</i></p>
 </div>
 
 
