--- a/views/materias.html
+++ b/views/materias.html
@@ -64,6 +64,8 @@
     <p>Como puedes comprobar, el límite de la Simpatía se encuentra en el entorno, si escaseas de los recursos necesarios en el entorno, por ejemplo, poca humedad, no podrás realizar simpatismo vinculado con el agua. En cuyo caso tendrías que recurrir al propio agua de tu cuerpo.</p>
     
     <p>No obstante, date cuenta que del mismo modo que los recursos en el ambiente se consumen para ese intercmbio de energía lo mismo pasa con los recursos del propio cuerpo, por lo que estos casos suelen ser la última baza. Gastar toda la humedad del cuerpo puede llegar a matar a su usuario por deshidratación, gastar tu calor te hará sufrir hipotermia, gastar el aire de tus pulmones, asfixia.   </p>
+    <p>Además de todo esto, el simpatismo, como el propio nombre indica, funciona mejor cuanto más similares son las cosas. Dicho de otro modo, los vínculos por los que se intercambia la energía son más fuertes. Por lo cual, cuanto menos fuerte sea un vínculo, o de otro modo, cuanto menos similares sean los dos focos por los que se intenta trasladar energía, más eergía se perderá en el camino.</p>
+    
     <p><i>Los hechiceros al igual que los simpatistas pueden usar contendores de magia para suplir sus límites: El simpatismo guarda la energía que necesita (focos de calor concentrado, focos de agua, etc) y el hechicero guarda el maná que necesite. Sin embargo requieren de la rama de runología para poder hacer dichos contendores.</i></p>    
 
 </div>
