--- a/views/materias.html
+++ b/views/materias.html
@@ -36,7 +36,7 @@
     <div class="buttonMat" id="alqui" style="background-color: #4ca58d">Alquimia</div>
     <div class="buttonMat" id="cmagic" style="background-color: #e28195">C. Mágicas</div>
     <div class="buttonMat" id="herbol" style="background-color: #73c261">Herbología</div>
-    <div class="buttonMat" id="exorc" style="background-color: #c987b9">Exorcismo</div>
+    <div class="buttonMat" id="exorc" style="background-color: #715694">Exorcismo</div>
     <div class="buttonMat" id="histor" style="background-color: #8da3c8">Historia</div>
     <div class="buttonMat" id="maref" style="background-color: #846161">Maref</div>
     <div class="buttonMat" id="mental" style="background-color: #9cab70">Mentalismo</div>
@@ -64,7 +64,8 @@
     <p>Como puedes comprobar, el límite de la Simpatía se encuentra en el entorno, si escaseas de los recursos necesarios en el entorno, por ejemplo, poca humedad, no podrás realizar simpatismo vinculado con el agua. En cuyo caso tendrías que recurrir al propio agua de tu cuerpo.</p>
     
     <p>No obstante, date cuenta que del mismo modo que los recursos en el ambiente se consumen para ese intercmbio de energía lo mismo pasa con los recursos del propio cuerpo, por lo que estos casos suelen ser la última baza. Gastar toda la humedad del cuerpo puede llegar a matar a su usuario por deshidratación, gastar tu calor te hará sufrir hipotermia, gastar el aire de tus pulmones, asfixia.   </p>
-    <p>Además de todo esto, el simpatismo, como el propio nombre indica, funciona mejor cuanto más similares son las cosas. Dicho de otro modo, los vínculos por los que se intercambia la energía son más fuertes. Por lo cual, cuanto menos fuerte sea un vínculo, o de otro modo, cuanto menos similares sean los dos focos por los que se intenta trasladar energía, más eergía se perderá en el camino.</p>
+    
+    <p class="datoextra">Además de todo esto, el simpatismo, como el propio nombre indica, funciona mejor cuanto más similares son las cosas. Dicho de otro modo, los vínculos por los que se intercambia la energía son más fuertes. Por lo cual, cuanto menos fuerte sea un vínculo, o de otro modo, cuanto menos similares sean los dos focos por los que se intenta trasladar energía, más energía se perderá en el camino.</p>
     
     <p><i>Los hechiceros al igual que los simpatistas pueden usar contendores de magia para suplir sus límites: El simpatismo guarda la energía que necesita (focos de calor concentrado, focos de agua, etc) y el hechicero guarda el maná que necesite. Sin embargo requieren de la rama de runología para poder hacer dichos contendores.</i></p>    
 
@@ -85,6 +86,9 @@
     <p>Una vez va llegado al límite del maná se va perdiendo consciencia de sí mismo, pudiendo llegar a la muerte. Quienes se acercan demasiado al límite en ocasiones sufren impedimentos crónicos en su sistema motriz, en el habla, pudiendo llegar incluso a afectar el intelecto.</p>
     <p>Otra diferencia con el simpatismo es que los conjuros deben ser invocados con palabras. Mentalmente o habladas. Pueden ser en lenguaje natural, pero los conjuros más fuertes son aquellos pronunciados en lenguajes antiguos o compuestos por una formulación de palabras concreta.</p>
     
+    <p>El maná, además de ser un recurso interno, también está presente en el universo. Es similar a la energía del simpatismo, y es que tienen cierta relación. A este maná se le denomina "magículas". Todo lo que tenga magículas es capaz de albergar energía, y del mismo modo que el simpatista juega con esa energía, los hechiceros manipulan las magículas del universo para crear sus conjuros, manípular ese maná es lo que consume el maná propio.</p>
+    <p>El propósito que se le da a dicha manipulación tiene una tendencia a dos polos: Luz y oscuridad. Las magículas se mantienen en un estado neutro y mutan según la influencia que le da el portador.</p>
+
     <p><i>Los hechiceros al igual que los simpatistas pueden usar contendores de magia para suplir sus límites: El simpatismo guarda la energía que necesita (focos de calor concentrado, focos de agua, etc) y el hechicero guarda el maná que necesite. Sin embargo requieren de la rama de runología para poder hacer dichos contendores.</i></p>    
 
 </div>
