--- a/views/materias.html
+++ b/views/materias.html
@@ -87,7 +87,7 @@
     <p>Otra diferencia con el simpatismo es que los conjuros deben ser invocados con palabras. Mentalmente o habladas. Pueden ser en lenguaje natural, pero los conjuros más fuertes son aquellos pronunciados en lenguajes antiguos o compuestos por una formulación de palabras concreta.</p>
     
     <p>El maná, además de ser un recurso interno, también está presente en el universo. Es similar a la energía del simpatismo, y es que tienen cierta relación. A este maná se le denomina "magículas". Todo lo que tenga magículas es capaz de albergar energía, y del mismo modo que el simpatista juega con esa energía, los hechiceros manipulan las magículas del universo para crear sus conjuros, el esfuerzo que supone manípular ese maná es lo que consume el maná propio.</p>
-    <p>El propósito que se le da a dicha manipulación tiene una tendencia a dos polos: Luz y oscuridad. Las magículas se mantienen en un estado neutro y mutan según la influencia que le da el portador.</p>
+    <p>El propósito que se le da a dicha manipulación tiene una tendencia a dos polos: Luz y oscuridad. Son los mismos polos que se presentan en un combatiente de Maref cuando utiliza una forma de combate u otra como la Juyo-Vaapad. Las magículas se mantienen en un estado neutro, y mutan según la influencia que le da el portador.</p>
 
     <p><i>Los hechiceros al igual que los simpatistas pueden usar contendores de magia para suplir sus límites: El simpatismo guarda la energía que necesita (focos de calor concentrado, focos de agua, etc) y el hechicero guarda el maná que necesite. Sin embargo requieren de la rama de runología para poder hacer dichos contendores.</i></p>    
 
@@ -132,7 +132,7 @@
         <li><b>Ataru:</b> La forma agresiva. Es veloz y muy efectiva contra oponentes únicos, pero débil en combate prolongado y espacios confinados. Destaca por sus acrobacias asistidas por la fuerza de ataques poderosos.</li>
         <li><b>Shiem-Djen So:</b> Para desempeñarlo es necesario ser capaz de ver a través del tercer ojo a tu oponente y poder aplicar la forma Makashi y Soresu en conjunto. Sin la ayuda del tercer ojo esta forma es inútil.</li> 
         <li><b>Niaman:</b> La forma híbrida, combina todas las formas anteriores, pero sólo es capaz de funcionar si se domina todas y cada una de ellas a la perfección.</li>
-        <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro en un "todo vale". Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados.</li>
+        <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro. La filosofía de esta técnica se basa en un <i>"todo vale"</i>. Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados. Pues cuanto más se recurre a ella, más se acerca al polo de la oscuridad, como la magia negra de Hechicería.</li>
     </ul>
     <p>En la parte de adiestramiento para tonificar el cuerpo se incluyen pruebas de precisión, velocidad, escalada, vuelo, etc. Todo depende de la vía por la que el profesor está acostumbrado a instruir.</p>    
 
