--- a/views/materias.html
+++ b/views/materias.html
@@ -132,7 +132,7 @@
         <li><b>Ataru:</b> La forma agresiva. Es veloz y muy efectiva contra oponentes únicos, pero débil en combate prolongado y espacios confinados. Destaca por sus acrobacias asistidas por la fuerza de ataques poderosos.</li>
         <li><b>Shiem-Djen So:</b> Para desempeñarlo es necesario ser capaz de ver a través del tercer ojo a tu oponente y poder aplicar la forma Makashi y Soresu en conjunto. Sin la ayuda del tercer ojo esta forma es inútil.</li> 
         <li><b>Niaman:</b> La forma híbrida, combina todas las formas anteriores, pero sólo es capaz de funcionar si se domina todas y cada una de ellas a la perfección.</li>
-        <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro. La filosofía de esta técnica se basa en un <i>"todo vale"</i>. Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados. Pues cuanto más se recurre a ella, más se acerca al polo de la oscuridad, como la magia negra de Hechicería.</li>
+        <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro. La filosofía de esta técnica se basa en un <i>"todo vale"</i>. Destructiva, despiadada y sin escrúpulos. Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados. Pues cuanto más se recurre a ella, más se acerca al polo de la oscuridad, como la magia negra de Hechicería.</li>
     </ul>
     <p>En la parte de adiestramiento para tonificar el cuerpo se incluyen pruebas de precisión, velocidad, escalada, vuelo, etc. Todo depende de la vía por la que el profesor está acostumbrado a instruir.</p>    
 
