--- a/views/materias.html
+++ b/views/materias.html
@@ -107,7 +107,29 @@
 <div class="infoMat" value="herbol">herbol</div>
 
 <!--mat-->
-<div class="infoMat" value="exorc">exorc</div>
+<div class="infoMat" value="exorc">
+    <p>
+        El exorcismo se refiere a la supresión, el control y la defensa de prácticas de magia oscura: Individuos que han caminado demasiado por el sendero oscuro, la magia que manipula la esencia de aquellos que han perdido la vida, el enfrentamiento con entidades oscuras, o una cobinación de todas ellas.
+        </p>
+        
+        <p>
+        Si bien es cierto que tiene un fuerte vínculo con ámbitos como la Hechicería o Criaturas Mágicas, es porque Exorcismo recoge a una mezcla entre ambas para especificarse en una parte en la que ambas conectan y en la que hace mucho incapié.
+        </p>
+        
+        <p>
+        Aquellos que enseñan exorcismo dictan sus principios. Tales como: la comprensión de tales entidades, saber defenderse de las mims, expulsarlas y finalmente expulsarlas o liberarlas. Este último caso específico para cuando repesentan un pelígro público. Su punto central es mantener la armonía y la limpieza de impurezas necesarias. Tratará de buscar un balance de <i>“bien y mal”</i>.
+        </p>
+        
+        <ul>
+        <li>Comprensión: Entender los métodos con los que reconocer comportamientos, cambios en el ambiente y otras señales que representan la presencia de entidades oscuras. De igual forma, corresponde al reconocimiento del tipo de adversario, su poder y los conocimientos generales sobre demonología. Mas existen un amplio rango desde demonios más cercanos a las criaturas, hasta demonios del submundo que van más allá de éstos.</li>
+        <li>Defensa: Define la supervivencia ante encuentros evitando sufrir grandes efectos negativos o ser víctima de daños irreparables. Casos en los que haya que aprender a lidiar, por ejemplo contra entidades que consumen el maná.</li>
+        <li>Expulsión o Supresión: Lograr que el adversario no pueda moverse o se mantenga debilitado. Dependiendo del caso, mediante la restricción mágica o fisica.</li>
+        <li>Liberación: Corresponde a las habilidades que tratan de calmar a los a entidades agitadas, cercanas a acabar en el sendero oscuro y puedan traspasar la brecha. </li>
+        <li>Sellado: Engloba las tecnicas centradas en encerrar entidades malignas, o aquellas llegadas a límites incapaces de ser calmadas, en contenedores. Tales contenedores pueden variar desde objetos hasta seres vivos como personas. Pues hay entidades tan fuertes que un simple objeto no podría retenerlos, y hay veces que se sellan en recien nacidos.</li>
+        </ul>
+        
+        <p>Sólo los exorcistas más experimentados son capaces de detectar el engaño de las entidades maligas y sólo ellos saben realizar a la perfección un sellado. Es por ello, que a los iniciados se les enseña una alternatiba denominada Erradicar.</p>
+</div>
 
 <!--mat-->
 <div class="infoMat" value="histor">
@@ -132,7 +154,7 @@
         <li><b>Ataru:</b> La forma agresiva. Es veloz y muy efectiva contra oponentes únicos, pero débil en combate prolongado y espacios confinados. Destaca por sus acrobacias asistidas por la fuerza de ataques poderosos.</li>
         <li><b>Shiem-Djen So:</b> Para desempeñarlo es necesario ser capaz de ver a través del tercer ojo a tu oponente y poder aplicar la forma Makashi y Soresu en conjunto. Sin la ayuda del tercer ojo esta forma es inútil.</li> 
         <li><b>Niaman:</b> La forma híbrida, combina todas las formas anteriores, pero sólo es capaz de funcionar si se domina todas y cada una de ellas a la perfección.</li>
-        <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro. La filosofía de esta técnica se basa en un <i>"todo vale"</i>. Destructiva, despiadada y sin escrúpulos. Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados. Pues cuanto más se recurre a ella, más se acerca al polo de la oscuridad, como la magia negra de Hechicería.</li>
+        <li><b>Juyo-Vaapad:</b> La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro. La filosofía de esta técnica se basa en un <i>"todo vale"</i>. Sólo ve una cosa: La aniquilación. Despiadada y sin escrúpulos. Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados. Pues cuanto más se recurre a ella, más se acerca al polo de la oscuridad, como la magia negra de Hechicería.</li>
     </ul>
     <p>En la parte de adiestramiento para tonificar el cuerpo se incluyen pruebas de precisión, velocidad, escalada, vuelo, etc. Todo depende de la vía por la que el profesor está acostumbrado a instruir.</p>    
 
