--- a/views/materias.html
+++ b/views/materias.html
@@ -108,6 +108,7 @@
 
 <!--mat-->
 <div class="infoMat" value="exorc">
+    <div class="t2">Exorcismo</div>
     <p>
         El exorcismo se refiere a la supresión, el control y la defensa de prácticas de magia oscura: Individuos que han caminado demasiado por el sendero oscuro, la magia que manipula la esencia de aquellos que han perdido la vida, el enfrentamiento con entidades oscuras, o una cobinación de todas ellas.
         </p>
