--- a/views/materias.html
+++ b/views/materias.html
@@ -110,11 +110,11 @@
 <div class="infoMat" value="exorc">
     <div class="t2">Exorcismo</div>
     <p>
-        El exorcismo se refiere a la supresión, el control y la defensa de prácticas de magia oscura: Individuos que han caminado demasiado por el sendero oscuro, la magia que manipula la esencia de aquellos que han perdido la vida, el enfrentamiento con entidades oscuras, o una cobinación de todas ellas.
+        El exorcismo se refiere a la supresión, el control y la defensa de prácticas de magia oscura: Individuos que han caminado demasiado por el sendero oscuro, la magia que manipula la esencia de aquellos que han perdido la vida, el enfrentamiento con entidades oscuras, o una combinación de todas ellas.
         </p>
         
         <p>
-        Si bien es cierto que tiene un fuerte vínculo con ámbitos como la Hechicería o Criaturas Mágicas, es porque Exorcismo recoge a una mezcla entre ambas para especificarse en una parte en la que ambas conectan y en la que hace mucho incapié.
+        Si bien es cierto que tiene un fuerte vínculo con ámbitos como la Hechicería o Criaturas Mágicas, es porque Exorcismo recoge a una mezcla entre las dos para especificarse en una parte en la que ambas conectan, y en la que hace mucho incapié.
         </p>
         
         <p>
