--- a/views/materias.html
+++ b/views/materias.html
@@ -118,7 +118,7 @@
         </p>
         
         <p>
-        Aquellos que enseñan exorcismo dictan sus principios. Tales como: la comprensión de tales entidades, saber defenderse de las mims, expulsarlas y finalmente expulsarlas o liberarlas. Este último caso específico para cuando repesentan un pelígro público. Su punto central es mantener la armonía y la limpieza de impurezas necesarias. Tratará de buscar un balance de <i>“bien y mal”</i>.
+        Aquellos que enseñan exorcismo dictan sus principios. Tales como: la comprensión de dichas entidades, saber defenderse de las mimas, expulsarlas y finalmente liberarlas. Este último caso es específico para cuando repesentan un pelígro público. Su punto central es mantener la armonía y la limpieza de impurezas necesarias. Tratarán de buscar un balance de <i>“bien y mal”</i>.
         </p>
         
         <ul>
