--- a/views/materias.html
+++ b/views/materias.html
@@ -129,7 +129,7 @@
         <li><b>Sellado</b>: Engloba las tecnicas centradas en encerrar entidades malignas, o aquellas llegadas a límites incapaces de ser calmadas, en contenedores, normalmente con la ayuda de las runas. Tales contenedores pueden variar desde objetos hasta seres vivos como personas. Pues hay entidades tan fuertes que un simple objeto no podría retenerlos, y hay veces que se sellan en recien nacidos.</li>
         </ul>
         
-        <p>Sólo los exorcistas más experimentados son capaces de detectar el engaño de las entidades maligas en cuestión de segundos y sólo ellos saben realizar a la perfección un sellado. Es por ello, que a los iniciados se les enseña una alternatiba que ellos denominan como <i>Erradicar</i>.</p>
+        <p>Sólo los exorcistas más experimentados son capaces de detectar el engaño de las entidades maligas en cuestión de segundos y sólo ellos saben realizar a la perfección un sellado. Es por ello, que a los iniciados se les enseña una alternativa que ellos denominan como <i>Erradicar</i>.</p>
 </div>
 
 <!--mat-->
